<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.example.tindertec.paganActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/primary_light"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:textColor="@color/accent"
                android:text="@string/titulo"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_margin="5dp"
                android:hint="@string/numerotarjeta"
                android:textColorHint="@color/accent"
                android:id="@+id/noTarjeta"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_margin="5dp"
                android:hint="@string/nombre"
                android:textColorHint="@color/accent"
                android:id="@+id/nombre"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_margin="5dp"
                    android:hint="@string/mes"
                    android:textColorHint="@color/accent"
                    android:id="@+id/mes"
                    android:inputType="numberDecimal"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_margin="5dp"
                    android:hint="@string/año"
                    android:textColorHint="@color/accent"
                    android:id="@+id/año"
                    android:inputType="numberDecimal"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_margin="5dp"
                    android:hint="@string/cvv"
                    android:textColorHint="@color/accent"
                    android:id="@+id/cvv"
                    android:inputType="numberDecimal"
                    />






            </LinearLayout>

        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onScanPress"
        android:text="@string/scan"
        android:padding="5dp"
        android:background="@color/primary"
        android:textColor="@color/accent"
        />


</LinearLayout>